--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
     "isomorphic-fetch": "^3.0.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
